# question-answer-summarizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
