[project]
name = "question-answer-summarizer"
version = "0.1.0"
description = "Extract Q&A from MCQ PDFs and generate clean answer sheets"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "pdfplumber>=0.11.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
